force-app/main/default/objects/AccountSegments__c/AccountSegments__c.object-meta.xml
<CustomObject>
    <label>Account Segments</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Account Segments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>