force-app/main/default/objects/AccountSegments__c/fields/MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>MarginPercent__c</fullName>
    <formula>TotalMargin__c / TotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>