force-app/main/default/objects/AccountSegments__c/fields/TotalMargin__c.field-meta.xml
<CustomField>
    <fullName>TotalMargin__c</fullName>
    <label>Total Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>